# bharatiya-watch-party

./: .env.example  .gitignore  .impeccable.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: playbackSync.test.ts  playbackSync.ts  roomClient.ts  tauri.ts  types.ts
apps/desktop/src/styles/: app.css
crates/app-core/: Cargo.toml
crates/app-core/src/: error.rs  lib.rs  player.rs  protocol.rs  room.rs  validation.rs
docs/: QA_ACCEPTANCE_MATRIX.md  implementation-status.md
docs/release/: CONFIGURATION.md  LIBMPV_BUNDLING.md  RELEASE.md  RELEASE_NOTES_TEMPLATE.md  SIGNAL_SERVICE_DEPLOYMENT.md  SUPPORT_MATRIX.md
docs/specs/: 00-product-spec.md  01-system-architecture-spec.md  02-player-spec.md  03-realtime-protocol-spec.md  04-sync-engine-spec.md  05-room-service-spec.md  06-desktop-ui-spec.md  07-observability-and-performance-spec.md  08-test-spec.md  09-room-experience-spec.md  10-libmpv-integration-spec.md  11-session-and-reconnect-spec.md  12-sync-correction-spec.md  13-chat-and-presence-spec.md  14-turn-stun-and-networking-spec.md  15-observability-implementation-spec.md  16-performance-and-load-spec.md  17-packaging-and-release-spec.md  18-qa-and-acceptance-spec.md
scripts/: build-desktop.ps1  bundle-libmpv.ps1  check-libmpv.ps1  package-signal-service.ps1  run-signal-service.ps1  verify.ps1
services/signal-service/: Cargo.toml
services/signal-service/src/: lib.rs  main.rs
services/signal-service/tests/: config_env.rs  room_lifecycle.rs  router_smoke.rs
