[workspace]
members = [
    "crates/app-core",
    "services/signal-service",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["http1", "json", "macros", "ws"] }
futures = "0.3.31"
parking_lot = "0.12.5"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.2" }
tauri-build = { version = "2.5.1" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
