[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }