[package]
name = "signal-service"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Bharatiya Watch Party Contributors"]
description = "Host-authoritative signaling service for the Bharatiya Watch Party app"
repository = "https://github.com/anomalyco/opencode"
homepage = "https://github.com/anomalyco/opencode"
readme = "../../README.md"
publish = false

[dependencies]
app-core = { path = "../../crates/app-core" }
axum = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
